force-app/main/default/objects/AH_Manual_Credit_Lines__c/AH_Manual_Credit_Lines__c.object-meta.xml
<CustomObject>
    <description>NICC-030091
This object is used to link Products to Finance Requests.  Finance creates these records when manual credits need to be applied.</description>
    <label>Manual Credit Lines</label>
    <nameField>
        <displayFormat>MC-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manual Credit Lines</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>