force-app/main/default/objects/AH_Manual_Credit_Lines__c/fields/Line_Item_Net_Value__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Net_Value__c</fullName>
    <label>Line Item Net Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>