force-app/main/default/objects/AH_Manual_Credit_Lines__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Manual Credit Lines</relationshipLabel>
    <relationshipName>Manual_Credit_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>