force-app/main/default/objects/AH_Manual_Credit_Lines__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <formula>Product__r.ProductCode</formula>
    <inlineHelpText>The Product Code of the Product</inlineHelpText>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>